5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_1329.log
== TEST (2019-03-12 21:19:04) 
-- CODE:
print (4/180)
-- OUTPUT:
0.022222222222222223
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:19:08) 
-- CODE:
print (4/180)
-- EXECUTION TIME:
0.227009
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
0.022222222222222223
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:19:31) 
-- CODE:
print (4/180=45)
-- ERROR:
File "XXXX", line 1
    print (4/180=45)
          ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:19:34) 
-- CODE:
print (4/180=45)
-- EXECUTION TIME:
0.138136
-- ERROR:
  File "/home/codebench/codes/1582/1329/main.py", line 1
    print (4/180=45)
          ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:19:43) 
-- CODE:
print (45)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:19:46) 
-- CODE:
print (45)
-- EXECUTION TIME:
0.138048
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:05:35) 
-- CODE:
print (180/4)
-- OUTPUT:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:05:37) 
-- CODE:
print (180/4)
-- EXECUTION TIME:
0.1536
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
